# mini-kvstore

./: .gitignore  README.md  pyproject.toml  run.sh
src/: app.py
