[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-kvstore"
version = "0.1.0"
description = "A simple FastAPI-based key-value store with SQLite backend and token-based authentication."
authors = [
    { name = "Joongi Kim", email = "joongi@lablup.com" }
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["FastAPI", "SQLite", "Key-Value Store", "API"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi~=0.112.0",
    "uvicorn~=0.30.5",
    "pydantic~=2.8.2",
    "python-dotenv~=1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/lablup/mini-kvstore"
"Repository" = "https://github.com/lablup/mini-kvstore"

[project.optional-dependencies]
testing = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
