[project]
name = "mini-kvstore"
version = "0.1.0"
description = "A simple FastAPI-based key-value store with SQLite backend and token-based authentication."
authors = [
    { name = "Joongi Kim", email = "joongi@lablup.com" }
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["FastAPI", "SQLite", "Key-Value Store", "API"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi~=0.112.0",
    "uvicorn~=0.30.5",
    "pydantic~=2.10.4",
    "python-dotenv~=1.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pydantic>=2.10.4",
    "ruff>=0.8.6",
]
test = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
]

[project.scripts]
server = "app:main"

[project.urls]
"Homepage" = "https://github.com/lablup/mini-kvstore"
"Repository" = "https://github.com/lablup/mini-kvstore"

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    # "C",  # flake8-comprehensions
    # "B",  # flake8-bugbear
]
ignore = ["E203","E731","E501"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]
split-on-trailing-comma = true

[tool.ruff.format]
preview = true  # enable the black's preview style

[tool.mypy]
ignore_missing_imports = true
mypy_path = "src"
